# rustfulapi

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  codecov.yml  run  run.sh  rustfmt.toml  sqlx-data.json  test.sh
.github/: dependabot.yml
.github/workflows/: build-checker.yml  build-image.yml  check.yml  code-formater.yml  code-linter.yml  code-style-checker.yml  format.yml  image-builder.yml  security-audit.yml  security-checker.yml  spell-check.yml  spell-checker.yml  test-coverage.yml  test.yml
.sqlx/: query-4185139694447ad34e67bced01d9ed23206f6b4e53374905fb07a92ea863ff38.json  query-53c39e4726d1d4d07329df495c1a41e7ae8c6e21c92f7336b0007cc4e6002bab.json  query-6c5f7b9066b230f568fb8de469e356138829da61e3c1157296b2d5084f5b01c1.json  query-a36649d9f4bbe5785b466e2cef7942f67c361840945550e0badb84d98b831394.json  query-b10986d752b1109710fbd777a798908c283dd770fc5b12409d0478de485d7628.json  query-bb5b3ab4d0a0c678051be200eccf6114d9198d2d25436b69733126e216fc5fa0.json  query-e5273a19ea7dd740e2db0cd25a9265f0cd346e9e4eb01d76f58cf72f47648a63.json  query-f91dd64c2181b4d5591cbee740a58830c3ff0a3ff03c1af97953b03fc55b6927.json  query-fd206607dc77a808a645b298b56e374815737d3549d59def9ddfd6851ecd6292.json
app/: Cargo.toml
app/src/: main.rs
base-query/: Cargo.toml
base-query-derive/: Cargo.toml
base-query-derive/src/: lib.rs  query.rs  table.rs
base-query/src/: lib.rs
client/: Cargo.toml
client/src/: email.rs  http.rs  lib.rs  postgres.rs  redis.rs
configure/: Cargo.toml
configure/src/: db.rs  lib.rs  secret.rs  sentry.rs  server.rs  template.rs  tracing.rs  worker.rs
constant/: Cargo.toml
constant/src/: lib.rs
docker/dev/: .env  docker-compose.yml  down.sh  restart.sh  rm.sh  up.sh
docker/prod/: .env  docker-compose-le.yml  docker-compose.yml  restart.sh  up.sh
docs/: schema.puml
entity/: Cargo.toml
entity/src/: file.rs  lib.rs  role.rs  user.rs
error/: Cargo.toml
error/src/: lib.rs
handler/: Cargo.toml
handler/src/: lib.rs  openapi.rs  server.rs  user.rs
handler/src/admin/: user.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/src/context/: app.rs  mod.rs  seeder.rs
integration-tests/src/helper/: api.rs  assert.rs  email.rs  http.rs  mod.rs  result.rs
integration-tests/src/test_server/: mod.rs  test_server_state.rs
integration-tests/src/test_user/: test_user_active.rs  test_user_forgot_password.rs  test_user_invitation.rs  test_user_login.rs  test_user_logout.rs  test_user_profile.rs  test_user_refresh_token.rs  test_user_register.rs  test_user_reset_password.rs  test_user_validate_token.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_role_table.rs  m20220101_000001_create_role_type.rs  m20220101_000002_create_user_table.rs  m20220101_000003_create_message_table.rs
migrations/: 20230320054357_create_tables.sql
model/: Cargo.toml
model/src/: lib.rs  record.rs  request.rs  response.rs
query/: Cargo.toml
query/src/: file.rs  lib.rs  user.rs
router/: Cargo.toml
router/src/: lib.rs  server.rs  user.rs
router/src/admin/: mod.rs  user.rs
scripts/: init_database.sh  init_db.sh  init_mailhog.sh  init_mockserver.sh  init_postgres.sh  init_redis.sh  migration.sh  psql.sh  run
scripts/git/: pre-commit-cargo-fmt
scripts/git-hook/: pre-commit  pre-commit-cargo-fmt  pre-commit-typos
scripts/git-hooks/: pre-commit-cargo-fmt
scripts/mockserver-exceptions/: init.json
scripts/mockserver-expectations/: init.json
scripts/sql/: truncate_tables.sql
server/: Cargo.toml
server/src/: lib.rs  worker.rs
service/: Cargo.toml
service/src/: email.rs  lib.rs  redis.rs  session.rs  token.rs  user.rs
service/src/admin/: user.rs
service/src/security/: auth.rs  cors.rs
settings/: base.toml  dev.toml  prod.toml  test.toml
src/: lib.rs
src/client/: database.rs  email.rs  http.rs  mod.rs  redis.rs
src/configure/: db.rs  deserialize.rs  email.rs  env.rs  http.rs  mod.rs  redis.rs  secret.rs  sentry.rs  server.rs  template.rs  tracing.rs
src/constant/: mod.rs
src/dto/: mod.rs  request.rs  response.rs
src/entity/: message.rs  mod.rs  role.rs  user.rs
src/error/: mod.rs
src/handler/: mod.rs  openapi.rs  server.rs  token.rs  user.rs
src/handler/admin/: user.rs
src/migration/: m20220101_000001_create_role_type.rs  m20220101_000002_create_user_table.rs  mod.rs
src/repo/: message.rs  mod.rs  user.rs
src/router/: mod.rs  server.rs  token.rs  user.rs
src/router/admin/: user.rs
src/server/: mod.rs  state.rs  worker.rs
src/service/: email.rs  message.rs  mod.rs  redis.rs  session.rs  token.rs  user.rs
src/service/admin/: user.rs
src/util/: assertion.rs  claim.rs  dir.rs  file.rs  hash.rs  mod.rs  password.rs  path.rs  random.rs  regex.rs  result.rs  retry.rs  task.rs  ws.rs
state/: Cargo.toml
state/src/: lib.rs  worker.rs
static/key/: private_access_rsa_key.pem  private_refresh_rsa_key.pem  public_access_rsa_key.pem  public_refresh_rsa_key.pem
static/template/: activation.html  forget_password.html  invitation.html  login2fa.html
tests/api/: main.rs  test_invalid_request.rs
tests/api/admin_endpoint_tests/: mod.rs  test_user_list.rs
tests/api/context/: app.rs  seeder.rs
tests/api/helper/: api.rs  assert.rs  email.rs  http.rs  mod.rs  result.rs  user.rs
tests/api/server_endpoint_tests/: test_server_health_check.rs  test_server_state.rs
tests/api/token_endpoint_tests/: mod.rs  test_refresh_token.rs  test_token_info.rs
tests/api/user_endpoint_tests/: mod.rs  test_user_active.rs  test_user_forgot_password.rs  test_user_login.rs  test_user_logout.rs  test_user_profile.rs  test_user_refresh_token.rs  test_user_register.rs  test_user_reset_password.rs
util/: Cargo.toml
util/src/: assertion.rs  claim.rs  file.rs  http.rs  key.rs  lib.rs  password.rs  string.rs
