[package]
name = "rustfulapi"
authors = ["Mahdi Robatipoor<mahdi.robatipoor@gmail.com>"]
description = "RESTful API template built with Rust language"
edition = "2021"
homepage = "https://github.com/robatipoor/rustfulapi"
keywords = ["web", "api", "rest","orm"]
license = "MIT"
repository = "https://github.com/robatipoor/rustfulapi"
version = "0.1.0"

[[bin]]
name = "app"
path = "./src/bin/app.rs"

[[bin]]
name = "migration"
path = "./src/bin/migration.rs"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
sea-orm = { version = "1.0.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "1.0.0", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
anyhow = "1.0.86"
argon2 = "0.5.3"
async-trait = "0.1.81"
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "serde",
] }
config = "0.14.0"
fake = { version = "2.9.2", features = ["derive", "uuid", "chrono"] }
futures = "0.3.30"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.7", features = ["tokio1-native-tls", "builder"] }
log = "0.4.22"
log-derive = "0.4.1"
once_cell = "1.19.0"
openssl = "0.10.66"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.26.1", features = ["tokio-comp"] }
reqwest = { version = "0.12.2", features = ["json", "multipart", "stream"] }
scraper = "0.20.0"
sentry = "0.34.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tera = "1.20.0"
test-context = "0.3.0"
thiserror = "1.0.58"
tokio = { version = "1.39.3", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
url = "2.5.2"
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tokio-tungstenite = "0.23.1"
garde = { version = "0.20.0", features = ["full"] }
regex = "1.10.6"
wiremock = "0.6.1"