[package]
name = "rustfulapi"
authors = ["Mahdi Robatipoor<mahdi.robatipoor@gmail.com>"]
description = "RESTful API template built with Rust language"
edition = "2024"
homepage = "https://github.com/robatipoor/rustfulapi"
keywords = ["web", "api", "rest","orm"]
license = "MIT"
repository = "https://github.com/robatipoor/rustfulapi"
version = "0.1.0"

[[bin]]
name = "app"
path = "./src/bin/app.rs"

[[bin]]
name = "migration"
path = "./src/bin/migration.rs"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
sea-orm = { version = "1.1.2", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "1.1.2", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
anyhow = "1.0.94"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.39", default-features = false, features = [
  "clock",
  "serde",
] }
config = "0.15.8"
fake = { version = "4.0.0", features = ["derive", "uuid", "chrono"] }
futures = "0.3.31"
itertools = "0.14.0"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.11", features = ["tokio1-native-tls", "builder"] }
log = "0.4.22"
log-derive = "0.4.1"
openssl = "0.10.68"
rand = "0.9.0"
rand_core = { version = "0.9.2", features = ["std"] }
redis = { version = "0.29.0", features = ["tokio-comp"] }
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
scraper = "0.23.1"
sentry = "0.36.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
tera = "1.20.0"
test-context = "0.4.1"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
url = "2.5.2"
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tokio-tungstenite = "0.26.2"
garde = { version = "0.22.0", features = ["full"] }
regex = "1.11.1"
wiremock = "0.6.2"