[package]
edition.workspace = true
name = "app"
version = "0.1.0"

[dependencies]
actix-web = {workspace = true}
client = {path = "../client"}
configure = {path = "../configure"}
constant = {path = "../constant"}
error = {path = "../error"}
handler = {path = "../handler"}
router = {path = "../router"}
sentry-actix = {workspace = true}
server = {path = "../server"}
service = {path = "../service"}
sqlx = {workspace = true}
state = {path = "../state"}
test-context = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-actix-web = {workspace = true}
tracing-appender = {workspace = true}
tracing-bunyan-formatter = {workspace = true}
tracing-subscriber = {workspace = true}
uuid = {workspace = true}
