[package]
edition.workspace = true
name = "client"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
configure = {path = "../configure"}
constant = {path = "../constant"}
entity = {path = "../entity"}
error = {path = "../error"}
fake = {workspace = true}
hex = {workspace = true}
hmac = {workspace = true}
itertools = {workspace = true}
lettre = {workspace = true}
model = {path = "../model"}
once_cell = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true}
redis = {workspace = true}
reqwest = {workspace = true}
sentry = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
sqlx = {workspace = true}
strum = {workspace = true}
tera = {workspace = true}
test-context = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-bunyan-formatter = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
util = {path = "../util"}
utoipa = {workspace = true}
uuid = {workspace = true}
