[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
fake = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
