[package]
edition.workspace = true
name = "entity"
version = "0.1.0"

[dependencies]
chrono = {workspace = true}
fake = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true}
serde = {workspace = true}
sqlx = {workspace = true}
strum = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
