[package]
name = "error"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }
lettre = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
actix-multipart = {workspace = true }
