[package]
edition.workspace = true
name = "handler"
version = "0.1.0"

[dependencies]
actix-files = {workspace = true}
actix-web = {workspace = true}
client = {path = "../client"}
configure = {path = "../configure"}
constant = {path = "../constant"}
entity = {path = "../entity"}
error = {path = "../error"}
fake = {workspace = true}
model = {path = "../model"}
once_cell = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true}
service = {path = "../service"}
state = {path = "../state"}
tokio = {workspace = true}
tracing = {workspace = true}
util = {path = "../util"}
utoipa = {workspace = true}
uuid = {workspace = true}
