[package]
edition.workspace = true
name = "integration-tests"
version = "0.1.0"

[dependencies]
actix-files = {workspace = true}
actix-web = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
client = {path = "../client"}
configure = {path = "../configure"}
constant = {path = "../constant"}
entity = {path = "../entity"}
error = {path = "../error"}
fake = {workspace = true}
futures = {workspace = true}
handler = {path = "../handler"}
itertools = {workspace = true}
log = {workspace = true}
log-derive = {workspace = true}
model = {path = "../model"}
once_cell = {workspace = true}
query = {path = "../query"}
rand = {workspace = true}
rand_core = {workspace = true}
reqwest = {workspace = true}
router = {path = "../router"}
scraper = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
server = {path = "../server"}
service = {path = "../service"}
sqlx = {workspace = true}
state = {path = "../state"}
strum = {workspace = true}
tempfile = {workspace = true}
test-context = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-bunyan-formatter = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
util = {path = "../util"}
uuid = {workspace = true}
wiremock = {workspace = true}
