[package]
edition.workspace = true
name = "model"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
constant = {path = "../constant"}
entity = {path = "../entity"}
fake = {workspace = true}
lettre = {workspace = true}
once_cell = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
strum = {workspace = true}
tera = {workspace = true}
url = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
validator = {workspace = true}
