[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model"}
entity = { path = "../entity"}
constant = { path = "../constant"}
configure = { path = "../configure"}
error = { path = "../error"}
client = { path = "../client"}
util = { path = "../util"}
base-query = { path = "../base-query"}
base-query-derive = { path = "../base-query-derive"}
tokio = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
fake = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
test-context = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
tracing = { workspace = true }
