[package]
edition.workspace = true
name = "router"
version = "0.1.0"

[dependencies]
actix-web = {workspace = true}
actix-web-grants = {workspace = true}
client = {path = "../client"}
configure = {path = "../configure"}
constant = {path = "../constant"}
entity = {path = "../entity"}
error = {path = "../error"}
fake = {workspace = true}
handler = {path = "../handler"}
model = {path = "../model"}
rand = {workspace = true}
rand_core = {workspace = true}
service = {path = "../service"}
state = {path = "../state"}
tokio = {workspace = true}
tracing = {workspace = true}
util = {path = "../util"}
uuid = {workspace = true}
