[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
configure = { path = "../configure"}
client = { path = "../client"}
error = { path = "../error"}
state = { path = "../state"}
router = { path = "../router"}
service = { path = "../service"}
constant = { path = "../constant"}
handler = { path = "../handler"}
actix-web = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-service = { workspace = true }
actix-web-grants = { workspace = true }
actix-files = { workspace = true }
sentry-actix = { workspace = true }
test-context = { workspace = true }
async-trait = { workspace = true }
utoipa-swagger-ui= { workspace = true }
