[package]
edition.workspace = true
name = "server"
version = "0.1.0"

[dependencies]
actix-cors = {workspace = true}
actix-files = {workspace = true}
actix-service = {workspace = true}
actix-web = {workspace = true}
actix-web-grants = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
client = {path = "../client"}
configure = {path = "../configure"}
constant = {path = "../constant"}
error = {path = "../error"}
futures = {workspace = true}
handler = {path = "../handler"}
router = {path = "../router"}
sentry-actix = {workspace = true}
service = {path = "../service"}
state = {path = "../state"}
test-context = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-actix-web = {workspace = true}
utoipa-swagger-ui = {workspace = true}
