[package]
edition.workspace = true
name = "service"
version = "0.1.0"

[dependencies]
actix-cors = {workspace = true}
actix-files = {workspace = true}
actix-multipart = {workspace = true}
actix-service = {workspace = true}
actix-web = {workspace = true}
actix-web-grants = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
base64 = {workspace = true}
chrono = {workspace = true}
client = {path = "../client"}
configure = {path = "../configure"}
constant = {path = "../constant"}
entity = {path = "../entity"}
error = {path = "../error"}
fake = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
hmac = {workspace = true}
itertools = {workspace = true}
jsonwebtoken = {workspace = true}
lettre = {workspace = true}
model = {path = "../model"}
once_cell = {workspace = true}
query = {path = "../query"}
rand = {workspace = true}
rand_core = {workspace = true}
redis = {workspace = true}
reqwest = {workspace = true}
sanitize-filename = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
sqlx = {workspace = true}
state = {path = "../state"}
tera = {workspace = true}
test-context = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
util = {path = "../util"}
utoipa = {workspace = true}
uuid = {workspace = true}
validator = {workspace = true}
