[package]
edition.workspace = true
name = "state"
version = "0.1.0"

[dependencies]
actix-web = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
client = {path = "../client"}
configure = {path = "../configure"}
error = {path = "../error"}
futures = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
