[package]
edition.workspace = true
name = "util"
version = "0.1.0"

[dependencies]
actix-web = {workspace = true}
anyhow = {workspace = true}
argon2 = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
constant = {path = "../constant"}
entity = {path = "../entity"}
error = {path = "../error"}
fake = {workspace = true}
itertools = {workspace = true}
jsonwebtoken = {workspace = true}
model = {path = "../model"}
once_cell = {workspace = true}
openssl = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true}
redis = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
test-context = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
